@@ -8,5 +8,6 @@ require 'metallum'
 Dir["#{File.dirname(__FILE__)}/support/**/*.rb"].each {|f| require f}
 
 RSpec.configure do |config|
-  
+ 
+
 end
