@@ -1,3 +1,5 @@
 09.09.2011
 ----------
+Peco Danajlovski <vortexmk@gmail.com>
 * Started this CHANGELOG
+* Introduced guard for automatic testing
